--- a/front/src/Style/Home.css
+++ b/front/src/Style/Home.css
@@ -1,15 +1,25 @@
 body {
   background-color: #0064ad;
   font-family: "Roboto","Helvetica","Arial",sans-serif;
+  color: #ffffff;
+}
+
+.button.MuiButtonBase-root:hover {
+  background-color: #ffffff;
+  color: #0064ad !important;
+  font-weight: 800;
+  border: solid #ffffff 1px !important;
+  width: 75% !important;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 
-@media only screen and (max-width: 480px) {
+@media only screen  and (max-width: 480px) {
   .button {
     color: #ffffff !important;
     font-weight: 500;
     border: solid #ffffff 1px !important;
-    width: 75% ;
+    width: 75% !important;
   }
 
   .container{
@@ -31,33 +41,182 @@ body {
   .avarta {
     width: 200px !important;
     height: 200px !important;
-    text-align: center !important;
+    align-items: center !important;
+    justify-content: center !important;
+    margin: auto !important;
   }
   .box1 {
-    max-width: 375px;
-    height: 30%;
+    max-width: 480px;
     align-items: 'center' !important;
     justify-content: 'center' !important;
-    margin-top: auto;
-    margin-bottom: auto;
+    padding: auto;
   }
   .box2 {
-    max-width: 375px;
-    height: 70%;
+    max-width: 480px;
+     align-items: 'center';
+     justify-content: 'center';
+     text-align: center;
+     margin: auto;
+  }
+}
+
+
+@media only screen and (min-width: 481px) and (max-width: 720px) {
+  .button {
+    color: #ffffff !important;
+    font-weight: 500;
+    border: solid #ffffff 1px !important;
+    width: 75% !important;
+    height: 50px;
+    margin: auto;
+  }
+
+  .container{
+    display: block !important;
+    height: 100vh;
+    font-style: normal;
+    font-weight: 500;
+    text-align: center;
+    color: #ffffff;
+  }
+  h1 {
+    font-size: x-large;
+  }
+
+  p {
+    font-weight: 700;
+    margin: 25px;
+  }
+
+  .avarta {
+    width: 300px !important;
+    height: 300px !important;
+    align-items: center !important;
+    justify-content: center !important;
+    margin: auto !important;
+    padding: auto;
+  }
+  .box1 {
+    max-width: 720px;
+    margin: auto;
+    padding: auto;
+  }
+  .box2 {
+    max-width: 720px;
      align-items: 'center';
      justify-content: 'center';
      text-align: center;
      color: #ffffff ;
-     border: solid #ffffff;
-     margin-bottom: 1rem;
+     margin: auto;
   }
-
-
 }
 
+@media only screen and (min-width: 721px) and (max-width: 1024px) {
+  .button {
+    color: #ffffff !important;
+    font-weight: 500;
+    border: solid #ffffff 1px !important;
+    width: 75% !important;
+    height: 50px;
+    margin: auto;
+  }
 
+  .container{
+    display: flex !important;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    font-style: normal;
+    font-weight: 500;
+    text-align: center;
+    color: #ffffff;
+    padding: auto;
+    margin:auto;
+  }
+  h1 {
+    font-size: x-large;
+  }
 
+  p {
+    font-weight: 700;
+    margin: 25px;
+  }
 
+  .avarta {
+    width: 380px !important;
+    height: 400px !important;
+    align-items: center !important;
+    justify-content: center !important;
+    margin: auto !important;
+  }
+  .box1 {
+    width: 720px;
+    margin-top: 10px;
+    margin: auto;
+    padding: auto;
+  }
+  .box2 {
+    width: 720px;
+     align-items: 'center';
+     justify-content: 'center';
+     text-align: center;
+     color: #ffffff ;
+     margin: auto;
+  }
+}
 
+@media only screen and (min-width: 1025px) {
+  .button {
+    color: #ffffff !important;
+    font-size: medium !important;
+    font-weight: 600 !important;
+    border: solid #ffffff 1px !important;
+    width: 75% !important;
+    min-height: 55px;
+    margin: auto;
+  }
 
+  .container{
+    display: flex !important;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    font-style: normal;
+    font-weight: 800;
+    text-align: center;
+    color: #ffffff;
+    padding: auto;
+    margin:auto;
+  }
+  h1 {
+    font-size: xx-large;
+  }
 
+  p {
+    font-weight: 700;
+    font-size: large;
+    margin: 25px;
+  }
+
+  .avarta {
+    min-width: 480px !important;
+    min-height: 480px !important;
+    align-items: center !important;
+    justify-content: center !important;
+    margin: auto !important;
+  }
+  .box1 {
+    width: 100%;
+    margin-top: 10px;
+    margin: auto;
+    padding: auto;
+  }
+  .box2 {
+    width: 100%;
+     align-items: 'center';
+     justify-content: 'center';
+     text-align: center;
+     color: #ffffff ;
+     margin: auto;
+  }
+}
