Get menu list Ok, select menu top ok

--- a/front/src/Style/Home.css
+++ b/front/src/Style/Home.css
@@ -1,8 +1,8 @@
-body {
+/* body {
   background-color: #0064ad;
   font-family: "Roboto","Helvetica","Arial",sans-serif;
   color: #ffffff;
-}
+} */
 
 .button.MuiButtonBase-root:hover {
   background-color: #ffffff;
